# texture-share-vk

./: .github  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.rs
.gitea/workflows/: build.yaml
cmake/: ProjectConfig.cmake.in
cpp/: CMakeLists.txt
cpp/platform/: external_handle.h  external_handle_vk.h
cpp/platform/linux/: external_handle_vk.cpp
cpp/texture_share_gl/: texture_share_gl_client.cpp  texture_share_gl_client.hpp
cpp/texture_share_vk/: config.hpp.in  texture_share_vk_client.cpp  texture_share_vk_client.hpp  texture_share_vk_setup.cpp  texture_share_vk_setup.hpp
cpp/texture_share_vk/platform/linux/: external_handle.h  external_handle_gl.cpp  external_handle_gl.h  external_handle_vk.h
cpp/vk_shared_image/: vk_helpers.cpp  vk_helpers.h  vk_setup.cpp  vk_setup.h  vk_shared_image.cpp  vk_shared_image.h
cpp/vk_shared_image/platform/linux/: external_handle.cpp  external_handle.h  external_handle_vk.cpp  external_handle_vk.h
cpp/wrapper/: vk_setup_wrapper.h  vk_shared_image_wrapper.cpp  vk_shared_image_wrapper.h
gl_program/: gl_test_image_share.cpp  gl_test_image_share.h  main.cpp
ipc/src/: lib.rs
ipc/src/platform/: img_data.rs
ipc/src/platform/linux/: ipc_shmem.rs  ipc_unix_socket.rs
src/: client.rs  lib.rs  my_struct.rs  platform.rs  server.rs  vulkan.rs
src/platform/: img_data.rs  linux.rs
src/platform/linux/: ipc_commands.rs  ipc_shmem.rs  ipc_unix_socket.rs
src/vulkan/: vk_client.rs  vk_data.rs  vk_format.rs  vk_server.rs  vk_setup.rs  vk_shared_image.rs
tests/: server_client.rs
tests/daemon_comm/: main.cpp
texture-share-gl-client/: Cargo.toml  build.rs
texture-share-gl-client/c/: CMakeLists.txt
texture-share-gl-client/c/gl_extern/: gl_extern.c  gl_extern.h
texture-share-gl-client/cpp/: CMakeLists.txt
texture-share-gl-client/cpp/bindings/: texture_share_vk_base_structs.h
texture-share-gl-client/cpp/gl_shared_image/: gl_shared_image.cpp  gl_shared_image.h
texture-share-gl-client/cpp/gl_shared_image/platform/: external_handle_gl.h
texture-share-gl-client/cpp/gl_shared_image/platform/linux/: external_handle.cpp  external_handle.h  external_handle_gl.cpp  external_handle_gl.h
texture-share-gl-client/cpp/wrapper/: gl_shared_image_wrapper.cpp  gl_shared_image_wrapper.h
texture-share-gl-client/src/: bindings.rs  gl_client.rs  lib.rs  opengl.rs
texture-share-gl-client/src/opengl/: gl_format.rs  gl_shared_image.rs  glad.rs
texture-share-gl-client/tests/: server_client.rs
texture-share-ipc/: Cargo.toml  build.rs
texture-share-ipc/src/: bindings.rs  lib.rs  platform.rs
texture-share-ipc/src/platform/: daemon_launch.rs  img_data.rs  ipc_commands.rs  ipc_shmem.rs  linux.rs
texture-share-ipc/src/platform/linux/: ipc_shmem.rs  ipc_shmem_lock.rs  ipc_unix_socket.rs
texture-share-vk-base/: Cargo.toml  build.rs  cbindgen.toml
texture-share-vk-base/cpp/: CMakeLists.txt
texture-share-vk-base/cpp/bindings/: texture_share_vk_base_structs.h
texture-share-vk-base/cpp/vk_shared_image/: vk_helpers.cpp  vk_setup.cpp  vk_setup.h  vk_shared_image.cpp  vk_shared_image.h
texture-share-vk-base/cpp/vk_shared_image/platform/linux/: external_handle.cpp  external_handle_vk.h
texture-share-vk-base/cpp/wrapper/: vk_setup_wrapper.cpp  vk_setup_wrapper.h  vk_shared_image_wrapper.cpp  vk_shared_image_wrapper.h
texture-share-vk-base/src/: bindings.rs  lib.rs  vulkan.rs
texture-share-vk-base/src/vulkan/: vk_cpu_buffer.rs  vk_cpu_shared_image.rs  vk_device.rs  vk_entry.rs  vk_format.rs  vk_instance.rs  vk_setup.rs  vk_shared_image.rs
texture-share-vk-client/: Cargo.toml  build.rs
texture-share-vk-client/src/: bindings.rs  lib.rs  vk_client.rs
texture-share-vk-client/tests/: server_client.rs
texture-share-vk-server/: Cargo.toml
texture-share-vk-server/src/: bindings.rs  lib.rs  main.rs  vk_server.rs
texture-share-vk-server/src/platform/: linux.rs
texture-share-vk-server/src/platform/linux/: loop_server.rs
texture-share-vk-server/src/vk_server/: vk_copy_images.rs
texture_share_vk/: ipc_memory.cpp  ipc_memory.h  ipc_memory_processor_vk.cpp  ipc_memory_processor_vk.h  logging.h  shared_image_handle_vk.cpp  shared_image_handle_vk.h  shared_image_vk.cpp  shared_image_vk.h  texture_share_daemon.cpp  texture_share_daemon.h  texture_share_vk.cpp  texture_share_vk.h  texture_share_vk_client.cpp  texture_share_vk_client.h  vk_helpers.cpp  vk_helpers.h
texture_share_vk/daemon/: ipc_memory_processor_vk.cpp  ipc_memory_processor_vk.h  main.cpp  texture_share_daemon.cpp  texture_share_daemon.h
texture_share_vk/ipc_memory/: ipc_commands.h  ipc_memory.cpp  ipc_memory.h
texture_share_vk/opengl/: shared_image_gl.cpp  shared_image_gl.h  shared_image_handle_gl.cpp  shared_image_handle_gl.h  texture_share_gl_client.cpp  texture_share_gl_client.h
texture_share_vk/platform/: config.h.in  daemon_comm.h  platform.h  platform_gl.h  platform_vk.h  spawn_daemon.h
texture_share_vk/platform/linux/: daemon_comm.cpp  daemon_comm.h  external_handle.cpp  external_handle.h  external_handle_gl.cpp  external_handle_gl.h  external_handle_vk.cpp  external_handle_vk.h  spawn_daemon.cpp  spawn_daemon.h
texture_share_vk/platform/win32/: daemon_comm.cpp  daemon_comm.h  external_handle.cpp  external_handle.h  external_handle_gl.cpp  external_handle_gl.h  external_handle_vk.cpp  external_handle_vk.h
vk_program/: main.cpp  vk_program.cpp  vk_program.h  vk_test_image_share.cpp  vk_test_image_share.h
