[package]
name = "texture-share-gl-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
cxx = "1.0.107"
libc = "0.2.148"
texture-share-ipc = { path = "../texture-share-ipc" }

[dev-dependencies]

[build-dependencies]
cc = "1.0.83"
cmake = "0.1.50"
cxx-build = "1.0.107"
cbindgen = "0.26.0"
