[package]
name = "texture-share-vk-base"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "lib", "cdylib"]

[dependencies]
cxx = "1.0.107"
libc = "0.2.148"
texture-share-ipc = { path = "../texture-share-ipc" }
# vulkano = "0.33.0"

#[dev-dependencies]
#tempfile = "3.8.0"

[build-dependencies]
cc = "1.0.83"
cmake = "0.1.50"
cxx-build = "1.0.107"
cbindgen = "0.26.0"
