[package]
name = "texture-share-vk-base"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "lib", "cdylib"]

[dependencies]
ash = "0.37.3"
cxx = "1.0.107"
libc = "0.2.148"
texture-share-ipc = { path = "../texture-share-ipc" }
vk-mem = "0.3.0"
#tempfile = "3.8.0"
#texture-share-vk-server = { path = "../texture-share-vk-server" }

[build-dependencies]
cc = "1.0.83"
cmake = "0.1.50"
cxx-build = "1.0.107"
cbindgen = "0.26.0"
