[package]
name = "texture-share-vk-client"
version = "0.1.0"
edition = "2021"

#[lib]
#crate-type = ["staticlib"]

[dependencies]
texture-share-vk-base = { path = "../texture-share-vk-base" }
# vulkano = "0.33.0"

[dev-dependencies]
texture-share-vk-server = { path = "../texture-share-vk-server" }
#tempfile = "3.8.0"

[build-dependencies]
cbindgen = "0.26.0"
# cc = "1.0.83"
# cmake = "0.1.50"
# cxx-build = "1.0.107"
