[package]
name = "texture-share-vk-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
cxx = "1.0.107"
texture-share-vk-base = { path = "../texture-share-vk-base" }

[dev-dependencies]

[build-dependencies]
cbindgen = "0.26.0"
# cc = "1.0.83"
# cmake = "0.1.50"
cxx-build = "1.0.107"
