[package]
name = "texture-share-vk-server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
fs2 = "0.4.3"
polling = "3.2.0"
texture-share-vk-base = { path = "../texture-share-vk-base" }

#[features]
#build-binary = [ "clap" ]

[[bin]]
name = "texture-share-vk-server"
path = "src/main.rs"
#required-features = ["build-binary"]


# [build-dependencies]
# cc = "1.0.83"
# cmake = "0.1.50"
# cxx-build = "1.0.107"
